<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ly_main_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="15dp"
    android:background="@android:color/holo_green_dark"
    android:gravity="top|center_horizontal|center"
    android:padding="15dp"
    tools:context="com.hame.ecanel.materialdesign.activities.MainActivity"
    android:weightSum="1"
    android:orientation="vertical">

    <Button
        android:id="@+id/btn_text_options"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="openResult"
        android:text="@string/bt_txt_activity"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
    android:id="@+id/bt_Img_Opt"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:onClick="openImageOpt"
    android:text="@string/bt_Img_Opt"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    />

    <Button
        android:id="@+id/bt_Select_Opt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="openSelectedOpt"
        android:text="@string/bt_txt_SelectedOpt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bt_List_View"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="openListView"
        android:text="@string/bt_txt_ListView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



</LinearLayout>
