<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context="com.hame.ecanel.materialdesign.activities.ImageOptActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/cbx_atm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/chx_atm"
                    android:textSize="18sp" />

                <CheckBox
                    android:id="@+id/cbx_bag"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/cbx_bag" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/cbx_basket"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/cbx_basket" />

                <CheckBox
                    android:id="@+id/cbx_box"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/cbx_box" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/cbx_briefcase"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/cbx_briefcase" />

                <CheckBox
                    android:id="@+id/cbx_calculator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/cbx_calculator" />

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/iv_bag"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/div01"
                    android:layout_toRightOf="@+id/div01"
                    android:adjustViewBounds="true"
                    android:scaleType="fitXY"
                    app:srcCompat="@drawable/thumbnail_bag" />

                <ImageView
                    android:id="@+id/iv_atm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@+id/div01"
                    android:layout_toStartOf="@+id/div01"
                    android:adjustViewBounds="true"
                    android:scaleType="fitXY"
                    app:srcCompat="@drawable/thumbnail_atm" />

                <TextView
                    android:id="@+id/div01"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/iv_box"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_toEndOf="@+id/div02"
                    android:layout_toRightOf="@+id/div02"
                    android:adjustViewBounds="true"
                    android:scaleType="fitXY"
                    app:srcCompat="@drawable/thumbnail_box" />

                <ImageView
                    android:id="@+id/iv_basket"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@+id/div02"
                    android:layout_toStartOf="@+id/div02"
                    android:adjustViewBounds="true"
                    android:scaleType="fitXY"
                    app:srcCompat="@drawable/thumbnail_basket" />

                <TextView
                    android:id="@+id/div02"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/iv_calculator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/div03"
                    android:layout_toRightOf="@+id/div03"
                    android:adjustViewBounds="true"
                    android:scaleType="fitXY"
                    app:srcCompat="@drawable/thumbnail_calculator" />

                <ImageView
                    android:id="@+id/iv_briefcase"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@+id/div03"
                    android:layout_toStartOf="@+id/div03"
                    android:adjustViewBounds="true"
                    android:scaleType="fitXY"
                    app:srcCompat="@drawable/thumbnail_briefcase" />

                <TextView
                    android:id="@+id/div03"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
